2005-01-22  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/misc.cxx (cyg_fs_root_lookup): New function to find the mount
	point of a give filesystems root directory.
	* src/fio.h:
	* include/fileio.h: Made cyg_fs_{un}lock accessible outside of the 
	fileio package.

2004-01-22  Andrew Lunn  <andrew.lunn@ascom.ch>

	* 
2004-12-15  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/select.cxx (cyg_pselect): We need the oldmask under all
	conditions.

2004-12-01  Alex Paulis and Cameron Taylor  <ctaylor@waverider.com>

	* include/fileio.h: Changed si_thread to si_waitFlag
	* src/select.cxx: Improved efficiency: 1. Only threads waiting
	on a selector are woken up in selwake. This is done by swapping
	the condition variable for an event flag and registering threads
	for wakeup in selrecord. 2. No mutex is now required. 3. Search
	through the FD mask much streamlined.
 
2004-11-17  Jani Monoses <jani@iv.ro>

	* tests/socket.c: Allow building without kernel config.
	
2004-11-14  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/fileio1.c: Start the test using cyg_user_start so that
	it can be used without the kernel.	
	* tests/testfs.c (testfs_time): If we don't have a kernel return 0
	as the time rather than the current time.

2004-11-14  Jani Monoses <jani@iv.ro>

	* src/devfs.cxx: Removed unneeded header files so the package can
	be compiled without the kernel.

2004-10-13  David Brennan  <eCos@brennanhome.com>

	* include/fileio.h: 
	* src/file.cxx: Added support for cyg_fs_fssync,
	cyg_fs_get_attrib, and cyg_fs_set_attrib

2004-10-13  David Brennan  <eCos@brennanhome.com>

	* src/file.cxx: Added a check data ptr in LOCK_FS

2004-10-06  David Brennan  <eCos@brennanhome.com>

	* tests/pselect.c: Added check for POSIX signals while building
	the test case.
	* tests/select.c: Include sys/select.h to prevent a possible warning.
	
2004-10-01  Oyvind Harboe  <oyvind.harboe@zylin.com>

        * src/select.cxx: place the CYGBLD_ATTRIB_INIT_PRI such that it